Inclusión de las librerías ngx-bootstrap y Bootstrap CSS

--- a/proyecto044-ngx-bootstrap/angular.json
+++ b/proyecto044-ngx-bootstrap/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "f1c3d556-14f3-47d5-aef3-4380ede27a7a"
   }
 }
