--- a/proyecto057-controles-seleccion/angular.json
+++ b/proyecto057-controles-seleccion/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "proyecto056-form-group": {
+    "proyecto057-controles-seleccion": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/proyecto056-form-group",
+            "outputPath": "dist/proyecto057-controles-seleccion",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "proyecto056-form-group:build:production"
+              "browserTarget": "proyecto057-controles-seleccion:build:production"
             },
             "development": {
-              "browserTarget": "proyecto056-form-group:build:development"
+              "browserTarget": "proyecto057-controles-seleccion:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +75,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "proyecto056-form-group:build"
+            "browserTarget": "proyecto057-controles-seleccion:build"
           }
         },
         "test": {
@@ -97,8 +97,5 @@
         }
       }
     }
-  },
-  "cli": {
-    "analytics": "f33a6020-0b16-4278-826d-d46ad503c2ed"
   }
 }
